--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="blog da ceci" />
 <meta name="author" content="" />
-<meta name="keywords" content="personal," />
+<meta name="keywords" content="data structure,leetcode,personal,python," />
 
 
 
