--- a/public/404.html
+++ b/public/404.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+<head>
   <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="shortcut icon" href="http://localhost:1313/images/favicon.png" />
+<link rel="shortcut icon" href="https://cheshireviolet.github.io/images/favicon.png" />
 <title>404</title>
 <meta name="title" content="404 Page not found" />
 <meta name="description" content="blog da ceci" />
@@ -18,7 +18,7 @@
 
 
   
-  <meta property="og:url" content="http://localhost:1313/404.html">
+  <meta property="og:url" content="https://cheshireviolet.github.io/404.html">
   <meta property="og:site_name" content="violeta">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="blog da ceci">
@@ -59,7 +59,7 @@
 
   <a href="/blog/">Blog</a>
 
-<a href='http://localhost:1313/index.xml'>RSS</a>
+<a href='https://cheshireviolet.github.io/index.xml'>RSS</a>
 
 
 
